refactor: switch to new paradigm using only @Projection on interfaces